--- a/game.html
+++ b/game.html
@@ -20,7 +20,8 @@
           <a href="./game1/index.html">・玉転がし</a>
 			<ul>
 				矢印キーを使ってボールを操作するゲームです。<br>
-				<a href="https://note.com/unityjapan/n/n157e58f5167a">このサイト</a>を参考にしました。
+				<a href="https://note.com/unityjapan/n/n157e58f5167a">このサイト</a>を参考にしました。<br>
+                制作期間 2時間   公開日2022/3/9
 			</ul>
         </ul>
         
