FlappyBirdもどきを追加

--- a/FlappyBird/index.html
+++ b/FlappyBird/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/SehataKuro.github.io.loader.js";
+      var loaderUrl = buildUrl + "/FlappyBird.loader.js";
       var config = {
-        dataUrl: buildUrl + "/SehataKuro.github.io.data.br",
-        frameworkUrl: buildUrl + "/SehataKuro.github.io.framework.js.br",
-        codeUrl: buildUrl + "/SehataKuro.github.io.wasm.br",
+        dataUrl: buildUrl + "/FlappyBird.data.br",
+        frameworkUrl: buildUrl + "/FlappyBird.framework.js.br",
+        codeUrl: buildUrl + "/FlappyBird.wasm.br",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "FlappyBird",
