--- a/game.html
+++ b/game.html
@@ -17,12 +17,20 @@
         </header>
         
         <ul>
-          <a href="./game1/index.html">・玉転がし</a>
+            <a href="./game1/index.html">・玉転がし</a>
 			<ul>
 				矢印キーを使ってボールを操作するゲームです。<br>
-				<a href="https://note.com/unityjapan/n/n157e58f5167a">このサイト</a>を参考にしました。<br>
-                制作期間 2時間   公開日2022/3/9
-			</ul>
+			    <a href="https://note.com/unityjapan/n/n157e58f5167a">このサイト</a>を参考にしました。<br>
+                制作期間 2時間 公開日2022/3/9
+			</ul><br>
+            <a href="./FlappyBird/index.html">・FlappyBirdもどき</a>
+            <ul>
+                Spaceキーもしくは左クリックを使ってジャンプをして、<br>
+                飛んでくる核を避けるゲームです。<br>
+                イラストは<a href="https://twitter.com/chonoyushi">ちょのゆしさん</a>に描いてもらいました。<br>
+                <a href="https://qiita.com/2dgames_jp/items/59b361cf430d3dc6584b">このサイト</a>を参考にしました。<br>
+                制作期間 2日 公開日2022/3/11
+            </ul>
         </ul>
         
 		<div align="center">
