--- a/FlappyBird/index.html
+++ b/FlappyBird/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/FlappyBird.loader.js";
       var config = {
-        dataUrl: buildUrl + "/FlappyBird.data.br",
-        frameworkUrl: buildUrl + "/FlappyBird.framework.js.br",
-        codeUrl: buildUrl + "/FlappyBird.wasm.br",
+        dataUrl: buildUrl + "/FlappyBird.data",
+        frameworkUrl: buildUrl + "/FlappyBird.framework.js",
+        codeUrl: buildUrl + "/FlappyBird.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "FlappyBird",
