index.htmlを一つだけにした

--- a/game.html
+++ b/game.html
@@ -16,13 +16,13 @@
         </header>
         
         <ul>
-            <a href="./game1/index.html">・玉転がし</a>
+            <a href="./game1/game1.html">・玉転がし</a>
 			<ul>
 				矢印キーを使ってボールを操作するゲームです。<br>
 			    <a href="https://note.com/unityjapan/n/n157e58f5167a">このサイト</a>を参考にしました。<br>
                 制作期間 2時間 公開日2022/3/9
 			</ul><br>
-            <a href="./FlappyBird/index.html">・FlappyBirdもどき</a>
+            <a href="./FlappyBird/FlappyBird.html">・FlappyBirdもどき</a>
             <ul>
                 Spaceキーもしくは左クリックを使ってジャンプをして、<br>
                 飛んでくる核を避けるゲームです。<br>
