indexに面白機能を付けた

--- a/index.html
+++ b/index.html
@@ -2,4 +2,179 @@
 layout: default
 ---
 
-{% include posts.html %}
+
+<html>
+    <head>
+        <style>
+            .image-container {
+                position: relative;
+                width: 1000px;
+                height: 1000px;
+            }
+
+            .image-container svg {
+                position: absolute;
+                top: 0;
+                left: 0;
+            }
+        </style>
+    </head>
+    <body>
+        <input type="color" name="color_0" value="#ffffed" onchange="changeColor(0)">
+        <input type="color" name="color_1" value="#edd8e0" onchange="changeColor(1)">
+        <input type="color" name="color_2" value="#7abfff" onchange="changeColor(2)">
+        <input type="color" name="color_3" value="#ef8db1" onchange="changeColor(3)">
+        <input type="color" name="color_4" value="#2c2f41" onchange="changeColor(4)">
+
+        <button onclick="changeRandomColor()">ランダムな色に変更</button>
+
+        <button onclick="resetColors()">デフォルトの色に戻す</button>
+
+        <br>
+        <br>
+    
+        <div class="image-container">
+            <svg id="color_0" width="1000" height="1000" fill="#ffffed">
+                <rect class="cls-1" x="446.46" y="55.81" width="18.6" height="18.6"></rect>
+                <rect class="cls-1" x="390.65" y="74.41" width="18.6" height="18.6"></rect>
+                <path d="M279.04,111.61L279.04 130.22 279.04 148.82 297.64 148.82 316.24 148.82 316.24 130.22 316.24 111.61 297.64 111.61 279.04 111.61z"></path>
+                <path d="M409.25,279.04L409.25 297.64 409.25 316.24 427.85 316.24 427.85 297.64 446.46 297.64 446.46 279.04 427.85 279.04 409.25 279.04z"></path>
+                <path d="M241.83,334.84L223.23 334.84 223.23 353.44 241.83 353.44 260.43 353.44 260.43 334.84 260.43 316.24 241.83 316.24 241.83 334.84z"></path>
+            </svg>
+            <svg id="color_1" width="1000" height="1000" fill="#edd8e0">
+                <path d="M446.46,186.02L465.06 186.02 465.06 167.42 465.06 148.82 446.46 148.82 446.46 130.22 427.85 130.22 427.85 148.82 427.85 167.42 446.46 167.42 446.46 186.02z"></path>
+                <path d="M204.63,223.23L223.23 223.23 223.23 204.63 241.83 204.63 241.83 186.02 241.83 167.42 223.23 167.42 223.23 148.82 204.63 148.82 204.63 167.42 204.63 186.02 204.63 204.63 186.02 204.63 186.02 223.23 186.02 241.83 204.63 241.83 204.63 223.23z"></path>
+                <path d="M427.85,241.83L446.46 241.83 465.06 241.83 465.06 260.43 483.66 260.43 502.26 260.43 502.26 241.83 483.66 241.83 483.66 223.23 465.06 223.23 446.46 223.23 446.46 204.63 427.85 204.63 409.25 204.63 409.25 223.23 390.65 223.23 390.65 241.83 409.25 241.83 427.85 241.83z"></path>
+                <rect class="cls-1" x="390.65" y="260.43" width="18.6" height="18.6"></rect>
+                <rect class="cls-1" x="483.66" y="279.04" width="18.6" height="18.6"></rect>
+                <path d="M223.23,316.24L223.23 297.64 241.83 297.64 241.83 279.04 260.43 279.04 279.04 279.04 279.04 260.43 279.04 241.83 279.04 223.23 260.43 223.23 260.43 241.83 241.83 241.83 223.23 241.83 223.23 260.43 204.63 260.43 204.63 279.04 186.02 279.04 186.02 297.64 186.02 316.24 204.63 316.24 223.23 316.24z"></path>
+                <path d="M93.01,353.44L74.41 353.44 55.81 353.44 55.81 372.05 55.81 390.65 74.41 390.65 74.41 409.25 93.01 409.25 93.01 427.85 111.61 427.85 111.61 409.25 111.61 390.65 111.61 372.05 93.01 372.05 93.01 353.44z"></path>
+                <path d="M576.67,0L558.07 0 558.07 18.6 539.47 18.6 539.47 37.2 539.47 55.81 539.47 74.41 558.07 74.41 558.07 93.01 558.07 111.61 576.67 111.61 576.67 130.22 576.67 148.82 576.67 167.42 576.67 186.02 576.67 204.63 576.67 223.23 576.67 241.83 576.67 260.43 576.67 279.04 576.67 297.64 576.67 316.24 576.67 334.84 576.67 353.44 576.67 372.05 595.28 372.05 595.28 353.44 595.28 334.84 595.28 316.24 595.28 297.64 595.28 279.04 595.28 260.43 595.28 241.83 595.28 223.23 595.28 204.63 595.28 186.02 595.28 167.42 595.28 148.82 595.28 130.22 595.28 111.61 595.28 93.01 595.28 74.41 595.28 55.81 595.28 37.2 595.28 18.6 595.28 0 576.67 0z"></path>
+                <rect class="cls-1" x="558.07" y="372.05" width="18.6" height="18.6"></rect>
+                <path d="M576.67,427.85L558.07 427.85 558.07 446.46 576.67 446.46 595.28 446.46 595.28 427.85 595.28 409.25 576.67 409.25 576.67 427.85z"></path>
+                <path class="cls-1" d="m520.87,446.46v-93.01h-18.6v-37.2h-18.6v18.6h-18.6v18.6h-55.81v-37.2h-18.6v-37.2h-37.2v18.6h-37.2v-18.6h-18.6v93.01h-18.6v18.6h-55.81v-37.2h-18.6v37.2h-18.6v18.6h18.6v18.6h18.6v37.2h18.6v55.81h18.6v55.81h-18.6v18.6h130.22v-18.6h-37.2v-18.6h74.41v-18.6h18.6v-18.6h37.2v-18.6h18.6v-18.6h18.6v-18.6h18.6v18.6h18.6v-18.6h18.6v-18.6h-37.2Zm-130.22,37.2h-37.2v-18.6h-18.6v-18.6h18.6v-18.6h74.41v37.2h-18.6v18.6h-18.6Zm37.2-111.61v18.6h-37.2v-18.6h37.2Z"></path>
+                <path d="M576.67,520.87L558.07 520.87 539.47 520.87 539.47 539.47 539.47 558.07 558.07 558.07 558.07 576.67 576.67 576.67 576.67 595.28 595.28 595.28 595.28 576.67 595.28 558.07 595.28 539.47 595.28 520.87 595.28 502.26 576.67 502.26 576.67 520.87z"></path>
+            </svg>
+            <svg id="color_2" width="1000" height="1000" fill="#7abfff">
+                <path d="M111.61,0L93.01 0 74.41 0 74.41 18.6 93.01 18.6 93.01 37.2 111.61 37.2 111.61 18.6 130.22 18.6 148.82 18.6 148.82 0 130.22 0 111.61 0z"></path>
+                <path d="M111.61,148.82L111.61 167.42 130.22 167.42 130.22 148.82 130.22 130.22 111.61 130.22 111.61 148.82z"></path>
+                <rect class="cls-1" x="427.85" y="167.42" width="18.6" height="18.6"></rect>
+                <rect class="cls-1" x="409.25" y="186.02" width="18.6" height="18.6"></rect>
+                <rect class="cls-1" x="241.83" y="223.23" width="18.6" height="18.6"></rect>
+                <rect class="cls-1" x="353.44" y="427.85" width="18.6" height="18.6"></rect>
+                <rect class="cls-1" x="558.07" y="446.46" width="18.6" height="18.6"></rect>
+                <rect class="cls-1" x="353.44" y="465.06" width="18.6" height="18.6"></rect>
+                <rect class="cls-1" x="539.47" y="465.06" width="18.6" height="18.6"></rect>
+                <path d="M502.26,483.66L502.26 502.26 520.87 502.26 539.47 502.26 539.47 483.66 520.87 483.66 502.26 483.66z"></path>
+                <rect class="cls-1" x="483.66" y="520.87" width="18.6" height="18.6"></rect>
+                <path d="M465.06,558.07L465.06 576.67 483.66 576.67 483.66 558.07 483.66 539.47 465.06 539.47 465.06 558.07z"></path>
+                <rect class="cls-1" x="334.84" y="558.07" width="18.6" height="18.6"></rect>
+                <rect class="cls-1" x="483.66" y="576.67" width="18.6" height="18.6"></rect>
+            </svg>
+            <svg id="color_3" width="1000" height="1000" fill="#ef8db1">
+                <path d="M558.07,353.44L539.47 353.44 539.47 372.05 558.07 372.05 576.67 372.05 576.67 353.44 558.07 353.44z"></path>
+                <rect class="cls-1" x="409.25" y="372.05" width="18.6" height="18.6"></rect>
+                <path d="M576.67,372.05L576.67 390.65 576.67 409.25 595.28 409.25 595.28 390.65 595.28 372.05 576.67 372.05z"></path>
+                <path d="M409.25,446.46L390.65 446.46 372.05 446.46 353.44 446.46 353.44 465.06 372.05 465.06 372.05 483.66 390.65 483.66 409.25 483.66 409.25 465.06 427.85 465.06 427.85 446.46 427.85 427.85 409.25 427.85 409.25 446.46z"></path>
+                <path d="M576.67,465.06L558.07 465.06 558.07 483.66 539.47 483.66 539.47 502.26 520.87 502.26 502.26 502.26 502.26 520.87 502.26 539.47 483.66 539.47 483.66 558.07 483.66 576.67 502.26 576.67 502.26 595.28 520.87 595.28 539.47 595.28 558.07 595.28 576.67 595.28 576.67 576.67 558.07 576.67 558.07 558.07 539.47 558.07 539.47 539.47 539.47 520.87 558.07 520.87 576.67 520.87 576.67 502.26 595.28 502.26 595.28 483.66 595.28 465.06 595.28 446.46 576.67 446.46 576.67 465.06z"></path>
+                <rect class="cls-1" x="465.06" y="520.87" width="18.6" height="18.6"></rect>
+                <rect class="cls-1" x="353.44" y="558.07" width="18.6" height="18.6"></rect>
+                <rect class="cls-1" x="372.05" y="130.22" width="18.6" height="18.6"></rect>
+                <rect class="cls-1" x="390.65" y="148.82" width="18.6" height="18.6"></rect>
+                <rect class="cls-1" x="260.43" y="167.42" width="18.6" height="18.6"></rect>
+                <rect class="cls-1" x="409.25" y="167.42" width="18.6" height="18.6"></rect>
+                <rect class="cls-1" x="241.83" y="186.02" width="18.6" height="18.6"></rect>
+                <rect class="cls-1" x="427.85" y="186.02" width="18.6" height="18.6"></rect>
+                <rect class="cls-1" x="223.23" y="204.63" width="18.6" height="18.6"></rect>
+                <rect class="cls-1" x="446.46" y="204.63" width="18.6" height="18.6"></rect>
+                <rect class="cls-1" x="204.63" y="223.23" width="18.6" height="18.6"></rect>
+                <rect class="cls-1" x="186.02" y="241.83" width="18.6" height="18.6"></rect>
+                <rect class="cls-1" x="446.46" y="241.83" width="18.6" height="18.6"></rect>
+                <path d="M465.06,334.84L465.06 316.24 446.46 316.24 446.46 334.84 427.85 334.84 409.25 334.84 409.25 353.44 427.85 353.44 446.46 353.44 465.06 353.44 465.06 334.84z"></path>
+                <path d="M260.43,372.05L241.83 372.05 223.23 372.05 223.23 390.65 241.83 390.65 260.43 390.65 279.04 390.65 279.04 372.05 279.04 353.44 260.43 353.44 260.43 372.05z"></path>
+                <path d="M353.44,55.81L372.05 55.81 390.65 55.81 409.25 55.81 409.25 37.2 427.85 37.2 427.85 55.81 446.46 55.81 465.06 55.81 465.06 74.41 483.66 74.41 502.26 74.41 502.26 93.01 520.87 93.01 520.87 74.41 520.87 55.81 520.87 37.2 502.26 37.2 502.26 18.6 483.66 18.6 465.06 18.6 446.46 18.6 446.46 0 427.85 0 409.25 0 390.65 0 372.05 0 353.44 0 334.84 0 316.24 0 297.64 0 279.04 0 260.43 0 241.83 0 223.23 0 204.63 0 186.02 0 167.42 0 148.82 0 148.82 18.6 130.22 18.6 111.61 18.6 111.61 37.2 93.01 37.2 74.41 37.2 74.41 55.81 55.81 55.81 55.81 74.41 37.2 74.41 37.2 93.01 18.6 93.01 18.6 111.61 18.6 130.22 0 130.22 0 148.82 0 167.42 0 186.02 0 204.63 0 223.23 0 241.83 0 260.43 0 279.04 0 297.64 0 316.24 0 334.84 0 353.44 18.6 353.44 18.6 334.84 18.6 316.24 18.6 297.64 37.2 297.64 37.2 279.04 37.2 260.43 37.2 241.83 55.81 241.83 55.81 223.23 55.81 204.63 55.81 186.02 55.81 167.42 55.81 148.82 74.41 148.82 74.41 167.42 74.41 186.02 74.41 204.63 93.01 204.63 93.01 186.02 93.01 167.42 111.61 167.42 111.61 148.82 111.61 130.22 130.22 130.22 130.22 111.61 148.82 111.61 148.82 93.01 167.42 93.01 186.02 93.01 204.63 93.01 223.23 93.01 241.83 93.01 260.43 93.01 279.04 93.01 297.64 93.01 297.64 74.41 316.24 74.41 334.84 74.41 353.44 74.41 353.44 55.81z"></path>
+                <path d="M18.6,483.66L18.6 465.06 0 465.06 0 483.66 0 502.26 0 520.87 18.6 520.87 18.6 502.26 18.6 483.66z"></path>
+                <path d="M55.81,539.47L37.2 539.47 37.2 520.87 18.6 520.87 18.6 539.47 18.6 558.07 37.2 558.07 37.2 576.67 55.81 576.67 55.81 558.07 55.81 539.47z"></path>
+                <path d="M167.42,353.44L148.82 353.44 148.82 334.84 130.22 334.84 130.22 316.24 130.22 297.64 111.61 297.64 111.61 279.04 93.01 279.04 93.01 260.43 93.01 241.83 74.41 241.83 74.41 260.43 74.41 279.04 74.41 297.64 74.41 316.24 74.41 334.84 93.01 334.84 93.01 353.44 93.01 372.05 111.61 372.05 111.61 390.65 111.61 409.25 111.61 427.85 130.22 427.85 130.22 409.25 148.82 409.25 148.82 390.65 167.42 390.65 186.02 390.65 186.02 372.05 167.42 372.05 167.42 353.44z"></path>
+                <rect class="cls-1" x="93.01" y="427.85" width="18.6" height="18.6"></rect>
+                <path d="M111.61,483.66L130.22 483.66 130.22 465.06 130.22 446.46 111.61 446.46 111.61 465.06 111.61 483.66z"></path>
+                <rect class="cls-1" x="130.22" y="483.66" width="18.6" height="18.6"></rect>
+                <rect class="cls-1" x="148.82" y="520.87" width="18.6" height="18.6"></rect>
+                <rect class="cls-1" x="167.42" y="539.47" width="18.6" height="18.6"></rect>
+                <path d="M55.81,576.67L55.81 595.28 74.41 595.28 93.01 595.28 93.01 576.67 74.41 576.67 55.81 576.67z"></path>
+            </svg>
+            <svg id="color_4" width="1000" height="1000" fill="#2c2f41">
+                <rect class="cls-1" x="502.26" y="465.06" width="18.6" height="18.6"></rect>
+                <path d="M483.66,502.26L465.06 502.26 465.06 520.87 483.66 520.87 502.26 520.87 502.26 502.26 502.26 483.66 483.66 483.66 483.66 502.26z"></path>
+                <path d="M427.85,520.87L427.85 539.47 409.25 539.47 409.25 558.07 390.65 558.07 372.05 558.07 372.05 576.67 372.05 595.28 390.65 595.28 409.25 595.28 427.85 595.28 446.46 595.28 465.06 595.28 483.66 595.28 483.66 576.67 465.06 576.67 465.06 558.07 465.06 539.47 465.06 520.87 446.46 520.87 427.85 520.87z"></path>
+                <path d="M223.23,353.44L223.23 372.05 241.83 372.05 260.43 372.05 260.43 353.44 241.83 353.44 223.23 353.44z"></path>
+                <rect class="cls-1" x="390.65" y="372.05" width="18.6" height="18.6"></rect>
+                <path d="M372.05,427.85L372.05 446.46 390.65 446.46 409.25 446.46 409.25 427.85 390.65 427.85 372.05 427.85z"></path>
+                <rect class="cls-1" x="334.84" y="446.46" width="18.6" height="18.6"></rect>
+                <path d="M409.25,279.04L390.65 279.04 390.65 297.64 390.65 316.24 409.25 316.24 409.25 297.64 409.25 279.04z"></path>
+                <rect class="cls-1" x="223.23" y="223.23" width="18.6" height="18.6"></rect>
+                <rect class="cls-1" x="204.63" y="241.83" width="18.6" height="18.6"></rect>
+                <path d="M18.6,111.61L18.6 93.01 37.2 93.01 37.2 74.41 55.81 74.41 55.81 55.81 74.41 55.81 74.41 37.2 93.01 37.2 93.01 18.6 74.41 18.6 74.41 0 55.81 0 37.2 0 18.6 0 0 0 0 18.6 0 37.2 0 55.81 0 74.41 0 93.01 0 111.61 0 130.22 18.6 130.22 18.6 111.61z"></path>
+                <path class="cls-1" d="m558.07,111.61v-37.2h-18.6V18.6h18.6V0h-111.61v18.6h55.81v18.6h18.6v55.81h-18.6v-18.6h-55.81v-18.6h-18.6v-18.6h-18.6v18.6h-55.81v18.6h-55.81v18.6h-148.82v18.6h-18.6v55.81h-37.2v37.2h-18.6v-55.81h-18.6v93.01h-18.6v55.81h-18.6v55.81H0v111.61h18.6v55.81h18.6v18.6h18.6v37.2h37.2v18.6h148.82v-18.6h18.6v-55.81h-18.6v-55.81h-18.6v-37.2h-18.6v-18.6h-18.6v-18.6h-37.2v18.6h-18.6v18.6h-18.6v18.6h18.6v37.2h18.6v18.6h-18.6v-18.6h-18.6v-37.2h-18.6v-37.2h-18.6v-18.6h-18.6v-37.2h37.2v-18.6h-18.6v-93.01h18.6v37.2h18.6v18.6h18.6v37.2h18.6v18.6h18.6v18.6h18.6v18.6h18.6v-37.2h18.6v-18.6h18.6v-18.6h18.6v37.2h18.6v18.6h18.6v-93.01h18.6v18.6h37.2v-18.6h37.2v-18.6h18.6v18.6h37.2v18.6h-18.6v18.6h-18.6v18.6h37.2v-18.6h18.6v18.6h18.6v-18.6h18.6v37.2h18.6v93.01h37.2v-18.6h18.6v-37.2h-18.6v-18.6h-18.6v-18.6h37.2V111.61h-18.6Zm-409.25,409.25h18.6v18.6h18.6v18.6h-18.6v-18.6h-18.6v-18.6Zm130.22-334.84h-18.6v18.6h-18.6v18.6h37.2v55.81h-37.2v18.6h-18.6v18.6h-37.2v-37.2h18.6v-18.6h-18.6v-55.81h18.6v-55.81h18.6v18.6h18.6v18.6h18.6v-18.6h18.6v18.6Zm37.2-55.81v18.6h-37.2v-37.2h37.2v18.6Zm74.41-55.81h18.6v18.6h-18.6v-18.6Zm111.61,223.23h-18.6v-18.6h18.6v18.6Zm0-37.2h-55.81v-18.6h-55.81v-18.6h18.6v-55.81h-18.6v-18.6h-18.6v-18.6h18.6v18.6h18.6v18.6h18.6v-37.2h18.6v18.6h18.6v37.2h-18.6v18.6h18.6v18.6h18.6v18.6h18.6v18.6Z"></path>
+                <path d="M37.2,558.07L18.6 558.07 18.6 539.47 18.6 520.87 0 520.87 0 539.47 0 558.07 0 576.67 0 595.28 18.6 595.28 37.2 595.28 55.81 595.28 55.81 576.67 37.2 576.67 37.2 558.07z"></path>
+            </svg>
+        </div>
+    </body>
+</html>
+
+
+<script>
+    function changeColor(index) {
+        var colorPicker = document.getElementsByName("color_" + index)[0];
+        var svgRect = document.getElementById("color_" + index);
+        svgRect.setAttribute("fill", colorPicker.value);
+    }
+
+    var colorPickers = document.querySelectorAll('input[type="color"]');
+    colorPickers.forEach(function(colorPicker, index) {
+        colorPicker.addEventListener('input', function() {
+            changeColor(index);
+        });
+    });
+
+    function changeRandomColor() {
+        var colorPickers = document.querySelectorAll('input[type="color"]');
+        colorPickers.forEach(function(colorPicker) {
+            var randomColor = getRandomColor();
+            colorPicker.value = randomColor;
+            var index = colorPicker.getAttribute("name").split("_")[1];
+            changeColor(index);
+        });
+    }
+
+    function getRandomColor() {
+        var letters = '0123456789ABCDEF';
+        var color = '#';
+        for (var i = 0; i < 6; i++) {
+            color += letters[Math.floor(Math.random() * 16)];
+        }
+        return color;
+    }
+
+    function resetColors() {
+        var colorPickers = document.querySelectorAll('input[type="color"]');
+        colorPickers.forEach(function(colorPicker, index) {
+            // Set the initial value as the default color
+            colorPicker.value = colorPicker.defaultValue;
+            // Trigger the change event to update the SVG
+            changeColor(index);
+        });
+    }
+
+    var colorPickers = document.querySelectorAll('input[type="color"]');
+    colorPickers.forEach(function(colorPicker, index) {
+        colorPicker.addEventListener('input', function() {
+            changeColor(index);
+        });
+    });
+</script>
+
+
+
+
+
