--- a/pages/categories.html
+++ b/pages/categories.html
@@ -7,7 +7,8 @@ permalink: /categories/
 <article class="container-page">
   <h1 class="page-title">{{ site.data.lang[site.language].categories_title }}</h1>
   <ul class="categories-list">
-    {% for category in site.categories %}
+    {% assign sorted_cats = site.categories | sort %}
+    {% for category in sorted_cats reversed %}
     <li id="{{ category | first }}">
       <b>・{{ category | first }}</b>
     {% assign sorted_posts = site.posts | sort: 'date'  | reverse %}{% for post in sorted_posts %}{%if post.categories contains category[0]%}
