--- a/pages/index.html
+++ b/pages/index.html
@@ -15,5 +15,13 @@ permalink: /
       </div></a>
     </div>
     {% endfor %}
-  </ul>
+  <div>
+    <b>・2024</b>
+    <p><a href="https://youtu.be/esR2XM9FuTw">hololive DEV_IS FLOW GLOW 輪堂千速 配信オープニング</a> コンポジット</p>
+    <p>TVアニメ「ブルーアーカイブ The Animation」 6,7,8,9,10,11,12話 撮影</p>
+    <b>・2023</b>
+    <p><a href="https://youtu.be/LYnhN_49tpE">Hakos Baelz x Inugami Korone - BITE! カム! BITE! MV</a> コンポジット タイトルロゴ原案</p>
+    <b>・2022</b>
+    <p><a href="https://youtu.be/_ZJ8MrEXIio">さくらみこ x 兎田ぺこら - モッシュレース MV</a> エディター</p>
+  </div>
 </article>
