about.mdにスクリプト作成を追加し、index.htmlに新しいプロジェクト情報を追加

--- a/pages/index.html
+++ b/pages/index.html
@@ -16,10 +16,16 @@ permalink: /
     </div>
     {% endfor %}
   <div>
+    <b>・2025</b>
+    <p>
+      <a href="https://tensei-ojisan.com/">TVアニメ「悪役令嬢転生おじさん」</a> 線撮
+    </p>
     <b>・2024</b>
     <p><a href="https://youtu.be/0Trz5HkzOzg">ぬまち。「オトナモード」MV</a> 映像制作・デザイン</p>
     <p><a href="https://youtu.be/esR2XM9FuTw">hololive DEV_IS FLOW GLOW 輪堂千速 配信オープニング</a> コンポジット</p>
-    <p>TVアニメ「ブルーアーカイブ The Animation」 6,7,8,9,10,11,12話 撮影</p>
+    <p><a href="https://rekiaku-anime.com/">TVアニメ「歴史に残る悪女になるぞ」</a> - 7,9,10,11,12,13話 撮影 撮影スクリプト協力</p>
+    <p><a href="https://maousama-anime.com/2024/">TVアニメ「魔王様、リトライ！R」</a> - 3,4,5,7,8,10話 撮影</p>
+    <p><a href="https://sh-anime.shochiku.co.jp/bluearchive-anime/">TVアニメ「ブルーアーカイブ The Animation」</a> - 6,7,8,9,10,11,12話 撮影</p>
     <b>・2023</b>
     <p><a href="https://youtu.be/LYnhN_49tpE">Hakos Baelz x Inugami Korone 「BITE! カム! BITE!」 MV</a> コンポジット タイトルロゴ原案</p>
     <p><a href="https://youtu.be/_ZJ8MrEXIio">さくらみこ x 兎田ぺこら 「モッシュレース」 MV</a> エディター</p>
