index.htmlのフォーマットを修正

--- a/pages/index.html
+++ b/pages/index.html
@@ -17,9 +17,7 @@ permalink: /
     {% endfor %}
   <div>
     <b>・2025</b>
-    <p>
-      <a href="https://tensei-ojisan.com/">TVアニメ「悪役令嬢転生おじさん」</a> 線撮
-    </p>
+    <p><a href="https://tensei-ojisan.com/">TVアニメ「悪役令嬢転生おじさん」</a> 線撮</p>
     <b>・2024</b>
     <p><a href="https://youtu.be/0Trz5HkzOzg">ぬまち。「オトナモード」MV</a> 映像制作・デザイン</p>
     <p><a href="https://youtu.be/esR2XM9FuTw">hololive DEV_IS FLOW GLOW 輪堂千速 配信オープニング</a> コンポジット</p>
